implement custom UI element

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="colorAccent">#008F24</color>
 
     <color name="colorHighLighted">#C4C4C4</color>
+    <color name="gray">#D4DEE7</color>
 </resources>
