--- a/app/src/main/res/layout/exercise.xml
+++ b/app/src/main/res/layout/exercise.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Exercise">
 
     <androidx.appcompat.widget.Toolbar
@@ -12,5 +13,68 @@
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/white"
         />
+
+    <LinearLayout
+        android:id="@+id/llRestView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tb_exercise"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="visible"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:text="@string/getReady"
+            android:textStyle="bold"
+            android:textSize="@dimen/ds22"
+            />
+
+        <FrameLayout
+            android:layout_width="@dimen/dp100"
+            android:layout_height="@dimen/dp100"
+            android:layout_marginTop="@dimen/dp10"
+            android:background="@drawable/item_circular_color_accent_boarder"
+            >
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="@dimen/dp100"
+                android:layout_height="@dimen/dp100"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_gravity="center"
+                android:max="10"
+                android:indeterminate="false"
+                android:background="@drawable/circular_progress_bar"
+                android:progress="100"
+                android:rotation="-90"
+                />
+
+            <LinearLayout
+                android:layout_width="@dimen/dp60"
+                android:layout_height="@dimen/dp60"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/item_circular_color_accent_background"
+                >
+
+                <TextView
+                    android:id="@+id/tvTimer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10"
+                    android:textSize="@dimen/ds25"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    />
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
