--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,12 @@
 <resources>
     <dimen name="dp220">220dp</dimen>
     <dimen name="dp150">150dp</dimen>
+    <dimen name="dp100">100dp</dimen>
+    <dimen name="dp60">60dp</dimen>
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp10">10dp</dimen>
     <dimen name="dp5">5dp</dimen>
 
+    <dimen name="ds25">25sp</dimen>
     <dimen name="ds22">22sp</dimen>
 </resources>
