--- a/app/src/main/res/layout/exercise.xml
+++ b/app/src/main/res/layout/exercise.xml
@@ -18,63 +18,56 @@
         android:id="@+id/llRestView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tb_exercise"
-        android:orientation="vertical"
+        android:layout_below="@id/tb_exercise"
         android:gravity="center"
-        android:visibility="visible"
-        >
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
             android:text="@string/getReady"
-            android:textStyle="bold"
-            android:textSize="@dimen/ds22"
-            />
+            android:textColor="@color/colorAccent"
+            android:textAllCaps="true"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <FrameLayout
-            android:layout_width="@dimen/dp100"
-            android:layout_height="@dimen/dp100"
-            android:layout_marginTop="@dimen/dp10"
-            android:background="@drawable/item_circular_color_accent_boarder"
-            >
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/item_circular_color_accent_boarder">
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                android:layout_width="@dimen/dp100"
-                android:layout_height="@dimen/dp100"
                 style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:max="10"
+                android:background="@drawable/circular_progress_gray"
                 android:indeterminate="false"
-                android:background="@drawable/circular_progress_bar"
+                android:max="10"
                 android:progress="100"
-                android:rotation="-90"
-                />
+                android:progressDrawable="@drawable/circular_progress_bar"
+                android:rotation="-90" />
 
             <LinearLayout
-                android:layout_width="@dimen/dp60"
-                android:layout_height="@dimen/dp60"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:background="@drawable/item_circular_color_accent_background"
-                >
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/tvTimer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10"
-                    android:textSize="@dimen/ds25"
+                    android:textColor="#FFFFFF"
+                    android:textSize="25sp"
                     android:textStyle="bold"
-                    android:textColor="@color/white"
-                    />
-
+                    tools:text="10" />
             </LinearLayout>
-
         </FrameLayout>
-
     </LinearLayout>
 
 </RelativeLayout>
