--- a/app/src/main/res/layout/exercise.xml
+++ b/app/src/main/res/layout/exercise.xml
@@ -80,6 +80,16 @@
         tools:visibility="visible"
         >
 
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/image"
+            android:src="@drawable/ic_jumping_jacks"
+            />
+
         <TextView
             android:id="@+id/tvExerciseName"
             android:layout_width="wrap_content"
@@ -94,7 +104,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/item_circular_color_accent_boarder">
+            android:background="@drawable/item_circular_color_accent_boarder"
+            android:layout_marginBottom="@dimen/dp20">
 
             <ProgressBar
                 android:id="@+id/progressBarExe"
