--- a/app/src/main/res/layout/exercise.xml
+++ b/app/src/main/res/layout/exercise.xml
@@ -98,6 +98,7 @@
         android:orientation="vertical"
         android:visibility="gone"
         tools:visibility="visible"
+        android:layout_above="@+id/rvExerciseStatus"
         >
 
         <ImageView
@@ -158,5 +159,14 @@
             </LinearLayout>
         </FrameLayout>
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvExerciseStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/dp5"
+        />
 
 </RelativeLayout>
