--- a/app/src/main/res/layout/bmi.xml
+++ b/app/src/main/res/layout/bmi.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,10 +12,53 @@
         android:background="@color/white"
         />
 
+    <RadioGroup
+        android:id="@+id/rgUnits"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/tb_bmi"
+        android:layout_margin="@dimen/dp10"
+        android:background="@drawable/drawable_radio_group_tab_back"
+        >
+
+        <RadioButton
+            android:id="@+id/rbMetricUnits"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:checked="true"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:button="@null"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/metric_units"
+            android:textAllCaps="true"
+            android:background="@drawable/drawable_units_tab_selector"
+            android:textColor="@drawable/drawable_unit_text_color_selector"
+             />
+        <RadioButton
+            android:id="@+id/rbUSUnits"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:checked="false"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:button="@null"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/us_units"
+            android:textAllCaps="true"
+            android:background="@drawable/drawable_units_tab_selector"
+            android:textColor="@drawable/drawable_unit_text_color_selector"
+            />
+
+    </RadioGroup>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tb_bmi"
+        android:layout_below="@+id/rgUnits"
         android:padding="@dimen/dp10"
         android:orientation="vertical"
         >
@@ -32,12 +73,78 @@
                 android:id="@+id/eMetricUnitWeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="WEIGHT (in kg)"
+                android:hint="@string/weight_in_kg"
                 android:inputType="numberDecimal"
                 android:textSize="16sp"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilUSUnitWeight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:visibility="gone"
+            tools:visibility="gone"
+            >
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/eUSUnitWeight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/weight_in_kg"
+                android:inputType="numberDecimal"
+                android:textSize="16sp"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            android:id="@+id/llUSUnitHeight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp10"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="gone"
+            >
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilUSUnitHeightFeet"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_weight="1"
+                android:layout_marginEnd="@dimen/dp10"
+                >
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/eUSUnitHeightFeet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/feet"
+                    android:inputType="number"
+                    android:textSize="16sp"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilUSUnitHeightInch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_weight="1"
+                android:layout_marginStart="@dimen/dp10"
+                >
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/eUSUnitheightInch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/inch"
+                    android:inputType="number"
+                    android:textSize="16sp"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilMetricUnitheight"
@@ -49,7 +156,7 @@
                 android:id="@+id/eMetricUnitheight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="hEIGHT (in cm)"
+                android:hint="@string/height_in_cm"
                 android:inputType="numberDecimal"
                 android:textSize="16sp"
                 />
@@ -62,7 +169,7 @@
             android:orientation="vertical"
             android:layout_marginTop="25dp"
             tools:visibility="visible"
-            android:visibility="visible"
+            android:visibility="gone"
             >
 
             <TextView
@@ -71,7 +178,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/your_bmi"
-                android:visibility="invisible"
                 android:textAllCaps="true"
                 android:textSize="16sp"
                 />
@@ -92,7 +198,7 @@
                 android:layout_marginTop="5dp"
                 android:textSize="18sp"
                 android:gravity="center"
-                android:text="Normal"
+                android:text="@string/normal"
                 />
             <TextView
                 android:id="@+id/tvBmiDesc"
@@ -101,7 +207,7 @@
                 android:layout_marginTop="5dp"
                 android:textSize="18sp"
                 android:gravity="center"
-                android:text="Normal"
+                android:text="@string/normal"
                 />
 
         </LinearLayout>
