--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,39 +37,82 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center"
         >
-
         <LinearLayout
-            android:id="@+id/llBMI"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:gravity="center"
-            android:background="@drawable/item_circular_color_accent_background"
+            android:layout_marginEnd="40dp"
             >
+
+            <LinearLayout
+                android:id="@+id/llBMI"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/item_circular_color_accent_background"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="BMI"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/ds22"
+                    android:textStyle="bold"
+                    />
+
+            </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="BMI"
-                android:textColor="@color/white"
+                android:layout_marginTop="@dimen/dp5"
                 android:textSize="@dimen/ds22"
                 android:textStyle="bold"
+                android:text="Calculator"
+                android:textColor="@color/colorAccent"
                 />
 
         </LinearLayout>
-
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp5"
-            android:textSize="@dimen/ds22"
-            android:textStyle="bold"
-            android:text="Calculator"
-            android:textColor="@color/colorAccent"
-            />
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginStart="40dp"
+            >
 
+            <LinearLayout
+                android:id="@+id/llHistory"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/item_circular_color_accent_background"
+                >
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/calendar"
+                    />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp5"
+                android:textSize="@dimen/ds22"
+                android:textStyle="bold"
+                android:text="@string/history"
+                android:textColor="@color/colorAccent"
+                />
+
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
